# fars_cleaner

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  meta.yaml  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  tester.py
.circleci/: config.yml
.github/workflows/: ci.yml  pythonpublish.yml  zenodo-release.yml
fars-cleaner/: __init__.py  data_loader.py  mapping.json
fars_cleaner/: __init__.py  builder.py  data_loader.py  datasets.py  extra_info.py  fars_processor.py  fars_utils.py  mapping.dict  registry.txt
fars_cleaner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fars_cleaner/lookup_tables/: Accident.xlsx  Additional_Information.xlsx  Parkwork.xlsx  Person.xlsx  Vehicle.xlsx  Vehnit.xlsx  mapping.dict
tests/: test_data_loader.py  test_datasets.py  test_ids.py  test_processor.py
