# pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pooch = ">=1.6.0"
pandas = [
    {version = "^1.4", python = ">=3.8"}
]
numpy = [
    {version = "^1.22.0", python = ">=3.8"},
]
scipy = "^1.7.0"

pathlib = "*"
pyjanitor = "^0.23.1"
dask = "*"
distributed = "^2022"
requests = "*"
tqdm = "*"
thefuzz = "*"

pytest = {version = "^7.1.0", optional = true}
hypothesis = {version = "*", optional = true}

[tool.poetry]
name = "fars_cleaner"
version = "1.3.2"
authors= [
    "Mitchell Abrams <mitchell.abrams@duke.edu>",
]
maintainers = [
    "Mitchell Abrams <mitchell.abrams@duke.edu>",
]
license = "BSD-3-Clause"
readme = "README.md"
description = "A package for loading and preprocessing the NHTSA FARS crash database"
repository = "https://github.com/mzabrams/fars-cleaner"
keywords = [
    "FARS",
    "crash analysis",
    "data preprocessing",
    "NHTSA",
    "vehicle safety"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
]
homepage = "https://github.com/mzabrams/fars-cleaner"
#packages = [{include = "poetry_demo"}]


#[tool.setuptools]
#packages = ["fars_cleaner"]
#include-package-data = true

[tool.poetry.extras]
dev = ["pytest", "hypothesis"]


